--- a/nginx/frontend/index.html
+++ b/nginx/frontend/index.html
@@ -8,6 +8,7 @@
   <script src="/js/button.js"></script>
 </head>
 <body>
+  <h1>Coinvertor</h1>
   <div class="converter">
     <div class="converter-side">
       <select name="currencyFrom" id="currencyFrom">
