--- a/nginx/frontend/index.html
+++ b/nginx/frontend/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <h1>Coinvertor</h1>
-  <!-- Skibidi -->
+  <!-- Sigma -->
   <div class="converter">
     <div class="converter-side">
       <select name="currencyFrom" id="currencyFrom">
