Optimalizace button.js

--- a/nginx/frontend/index.html
+++ b/nginx/frontend/index.html
@@ -5,6 +5,7 @@
   <title>Currency Converter</title>
   <link rel="stylesheet" href="/css/style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="/js/convert.js"></script>
   <script src="/js/button.js"></script>
 </head>
 <body>
